concolic_testing/klee/examples/software_testing/klee-out-4/test000001.kquery
array keyfound[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 0
                 (ReadLSB w32 0 keyfound)))]
        false)
